adding a middleware to render static files

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,1 +1,11 @@
-HELLO WORLD!
+<!DOCTYPE html>
+<html>
+<head>
+	<title>User Story</title>
+</head>
+<body>
+
+	<h1>Hello User!</h1>
+
+</body>
+</html>
