--- a/public/views/index.html
+++ b/public/views/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>User Story</title>
+	
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 </head>
 <body>
 
