--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html ng-app="MyApp">
 <head>
+<base href='/'></base>
 	<title>User Story</title>
 
 </head>
 <body>
 
-	<h1>{{ 'Hell' + 'o ' + 'User' }}</h1>
-
-
+<div ng-view></div>
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-route.min.js"></script>
+	<script type="text/javascript" src="app/services/authService.js"></script>
+	<script type="text/javascript" src="app/controllers/mainCtrl.js"></script>
+
 	<script type="text/javascript" src="app/app.js"></script>
 
 </body>
