--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="MyApp">
 <head>
-<base href='/'></base>
+	<base href='/'></base>
 	<title>User Story</title>
 
 </head>
@@ -14,6 +14,7 @@
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-route.min.js"></script>
 	<script type="text/javascript" src="app/services/authService.js"></script>
 	<script type="text/javascript" src="app/controllers/mainCtrl.js"></script>
+	<script type="text/javascript" src="app/app.routes.js"></script>
 
 	<script type="text/javascript" src="app/app.js"></script>
 
