--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
 
-<div ng-view></div>
+<main class="container">
+	<div ng-view></div>
+</main>
+
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
