--- a/public/app/views/pages/home.html
+++ b/public/app/views/pages/home.html
@@ -1,1 +1,10 @@
-Hello Home!
+<div class="jumbotron text-center">
+	<div>
+		<h1>Sign up!</h1>
+	</div>
+
+	<div>
+		<a href="/login" class="btn btn-primary">Login</a>
+	</div>
+
+</div>
