--- a/public/app/views/pages/login.html
+++ b/public/app/views/pages/login.html
@@ -1,9 +1,12 @@
 <div class="container" ng-controller="MainController as login">
-	
-	<form method="post" ng-submit="login.doLogin()">
-		Username: <input type="text" name="username" ng-model="login.loginData.username">
-		Password: <input type="text" name="password" ng-model="login.loginData.password">
-		<button type="submit" class="btn btn-success">Go!</button>
-	
-	</form>
+	<div class="row">
+		<div class="col-sm-6 col-md-4 col-md-offset-4">
+			<form method="post" ng-submit="login.doLogin()">
+				Username: <input type="text" name="username" ng-model="login.loginData.username">
+				Password: <input type="text" name="password" ng-model="login.loginData.password">
+				<button type="submit" class="btn btn-success">Go!</button>
+			
+			</form>
+		</div>
+	</div>
 </div>
