--- a/public/app/views/pages/signup.html
+++ b/public/app/views/pages/signup.html
@@ -1,1 +1,10 @@
-signup.html
+<div class="container" ng-controller="UserCreateController as user">
+	
+	<form method="post" ng-submit="login.doLogin()">
+	
+		Username: <input type="text" name="username" ng-model="login.loginData.username">
+		Password: <input type="text" name="password" ng-model="login.loginData.password">
+		<button type="submit" class="btn btn-success">Go!</button>
+	
+	</form>
+</div>
