--- a/public/app/views/pages/signup.html
+++ b/public/app/views/pages/signup.html
@@ -1,10 +1,13 @@
 <div class="container" ng-controller="UserCreateController as user">
-	
-	<form method="post" ng-submit="login.doLogin()">
-	
-		Username: <input type="text" name="username" ng-model="login.loginData.username">
-		Password: <input type="text" name="password" ng-model="login.loginData.password">
-		<button type="submit" class="btn btn-success">Go!</button>
-	
-	</form>
+	<div class="row">
+		<div class="col-sm-6 col-md-4 col-md-offset-4">
+			<form class="form-signin" method="post" ng-submit="user.signupUser">
+				Name: <input type="text" name="name" ng-model="user.userData.name">
+				Username: <input type="text" name="username" ng-model="user.userData.username">
+				Password: <input type="text" name="password" ng-model="user.userData.password">
+				<button type="submit" class="btn btn-danger">Sign-up!</button>
+			
+			</form>
+		</div>
+	</div>
 </div>
