--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -19,7 +19,7 @@
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li ng-if="!main.loggedIn"><a href="/login">Login</a></li>
-				<li ng-if="!main.loggedIn"><a href="/login">Login</a></li>
+				<li ng-if="!main.loggedIn"><a href="/signup">Sign-up</a></li>
 				<li ng-if="main.loggedIn"><a href="#">Hello {{ main.user.username }}</a></li>
 				<li ng-if="main.loggedIn"><a href="#" ng-click="main.doLogout()">Logout</a></li>
 			</ul>
@@ -37,6 +37,7 @@
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-route.min.js"></script>
 	<script type="text/javascript" src="app/services/authService.js"></script>
 	<script type="text/javascript" src="app/controllers/mainCtrl.js"></script>
+	<script type="text/javascript" src="app/services/userService.js"></script>
 	<script type="text/javascript" src="app/app.routes.js"></script>
 
 	<script type="text/javascript" src="app/app.js"></script>
