--- a/public/app/views/pages/login.html
+++ b/public/app/views/pages/login.html
@@ -3,7 +3,7 @@
 		<div class="col-sm-6 col-md-4 col-md-offset-4">
 			<form class="form-signin" method="post" ng-submit="login.doLogin()">
 				Username: <input type="text" name="username" ng-model="login.loginData.username">
-				Password: <input type="text" name="password" ng-model="login.loginData.password">
+				Password: <input type="password" name="password" ng-model="login.loginData.password">
 				<button type="submit" class="btn btn-success">Go!</button>
 			
 			</form>
