--- a/public/app/views/pages/signup.html
+++ b/public/app/views/pages/signup.html
@@ -4,7 +4,7 @@
 			<form class="form-signin" method="post" ng-submit="user.signupUser">
 				Name: <input type="text" name="name" ng-model="user.userData.name">
 				Username: <input type="text" name="username" ng-model="user.userData.username">
-				Password: <input type="text" name="password" ng-model="user.userData.password">
+				Password: <input type="password" name="password" ng-model="user.userData.password">
 				<button type="submit" class="btn btn-danger">Sign-up!</button>
 			
 			</form>
