--- a/public/app/views/pages/login.html
+++ b/public/app/views/pages/login.html
@@ -1,6 +1,7 @@
 <div class="container" ng-controller="MainController as login">
 	<div class="row">
 		<div class="col-sm-6 col-md-4 col-md-offset-4">
+		<h1>Login</h1>
 			<form class="form-signin" method="post" ng-submit="login.doLogin()">
 				Username: <input type="text" name="username" ng-model="login.loginData.username">
 				Password: <input type="password" name="password" ng-model="login.loginData.password">
