--- a/public/app/views/pages/signup.html
+++ b/public/app/views/pages/signup.html
@@ -1,7 +1,11 @@
 <div class="container" ng-controller="UserCreateController as user">
 	<div class="row">
+	<h1>Sign-up</h1>
+
 		<div class="col-sm-6 col-md-4 col-md-offset-4">
-			<form class="form-signin" method="post" ng-submit="user.signupUser">
+
+			<form class="form-signin" method="post" ng-submit="user.signupUser()">
+
 				Name: <input type="text" name="name" ng-model="user.userData.name">
 				Username: <input type="text" name="username" ng-model="user.userData.username">
 				Password: <input type="password" name="password" ng-model="user.userData.password">
