--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -36,7 +36,9 @@
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-route.min.js"></script>
 	<script type="text/javascript" src="app/services/authService.js"></script>
+	<script type="text/javascript" src="app/services/storyService.js"></script>
 	<script type="text/javascript" src="app/controllers/mainCtrl.js"></script>
+	<script type="text/javascript" src="app/controllers/storyCtrl.js"></script>
 		<script type="text/javascript" src="app/controllers/userCtrl.js"></script>
 
 	<script type="text/javascript" src="app/services/userService.js"></script>
