adding panel to show all user stories

--- a/public/app/views/pages/home.html
+++ b/public/app/views/pages/home.html
@@ -27,6 +27,13 @@
 						</div>
 					</div>
 				</div>
+
+				<div class="panel panel-success">
+					<div class="panel-body" ng-repeat="story in story.stories">
+						<p>{{story.content}}</p>
+
+					</div>
+				</div>
 			</div>
 		</div>
 
