calling socket.io from index.html

--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -39,10 +39,10 @@
 	<script type="text/javascript" src="app/services/storyService.js"></script>
 	<script type="text/javascript" src="app/controllers/mainCtrl.js"></script>
 	<script type="text/javascript" src="app/controllers/storyCtrl.js"></script>
-		<script type="text/javascript" src="app/controllers/userCtrl.js"></script>
-
+	<script type="text/javascript" src="app/controllers/userCtrl.js"></script>
 	<script type="text/javascript" src="app/services/userService.js"></script>
 	<script type="text/javascript" src="app/app.routes.js"></script>
+	<script type="text/javascript" src="/socket.io/socket.io.js"></script>
 
 	<script type="text/javascript" src="app/app.js"></script>
 
