--- a/public/app/views/pages/home.html
+++ b/public/app/views/pages/home.html
@@ -29,7 +29,7 @@
 				</div>
 
 				<div class="panel panel-success">
-					<div class="paniel-heading">Your stories</div>
+					<div class="panel-heading">Your stories</div>
 					<div class="panel-body" ng-repeat="story in story.stories">
 						<p>{{story.content}}</p>
 
