creating a directive to reverse the order of stories

--- a/public/app/views/pages/home.html
+++ b/public/app/views/pages/home.html
@@ -30,7 +30,7 @@
 
 				<div class="panel panel-success">
 					<div class="panel-heading">Your stories</div>
-					<div class="panel-body" ng-repeat="story in story.stories">
+					<div class="panel-body" ng-repeat="story in story.stories | reverse">
 						<p>{{ story.content }}</p>
 					</div>
 				</div>
