--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -41,6 +41,8 @@
 	<script type="text/javascript" src="app/controllers/storyCtrl.js"></script>
 	<script type="text/javascript" src="app/controllers/userCtrl.js"></script>
 	<script type="text/javascript" src="app/services/userService.js"></script>
+	<script type="text/javascript" src="app/directives/reverse.js"></script>
+
 	<script type="text/javascript" src="app/app.routes.js"></script>
 	<script type="text/javascript" src="/socket.io/socket.io.js"></script>
 
