--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -35,17 +35,22 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-route.min.js"></script>
+
+	<!-- Services -->
 	<script type="text/javascript" src="app/services/authService.js"></script>
 	<script type="text/javascript" src="app/services/storyService.js"></script>
+	<script type="text/javascript" src="app/services/userService.js"></script>
+
+	<!-- Controllers -->
 	<script type="text/javascript" src="app/controllers/mainCtrl.js"></script>
 	<script type="text/javascript" src="app/controllers/storyCtrl.js"></script>
 	<script type="text/javascript" src="app/controllers/userCtrl.js"></script>
-	<script type="text/javascript" src="app/services/userService.js"></script>
+	
+	<!-- Directives -->
 	<script type="text/javascript" src="app/directives/reverse.js"></script>
 
 	<script type="text/javascript" src="app/app.routes.js"></script>
 	<script type="text/javascript" src="/socket.io/socket.io.js"></script>
-
 	<script type="text/javascript" src="app/app.js"></script>
 
 </body>
