--- a/public/app/views/pages/home.html
+++ b/public/app/views/pages/home.html
@@ -1,7 +1,7 @@
 
 	<div class="jumbotron text-center" ng-if="!main.loggedIn">
 		<div>
-			<h1>Sign up!</h1>
+			<h1><a href="/signup">Sign-up!</a></h1>
 		</div>
 
 		<div>
